--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.33.1"
+    "react-intersection-observer": "^8.33.1",
+    "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
